Footer Logo Alignment Fix

--- a/client/src/components/general-page-layout/footer/footer.scss
+++ b/client/src/components/general-page-layout/footer/footer.scss
@@ -11,9 +11,9 @@
     flex-wrap: wrap;
 
     @media screen and (max-width: 768px) {
-      padding-left: 20px;
+      padding-left: 40px;
       padding-right: 20px;
-      justify-content: center;
+      justify-content: left;
       gap: 20px;
     }
 
